<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Story App</string>
    <string name="register_title">Please complete your data below to register your account</string>
    <string name="login_title">Please complete your data below to login with your account</string>
    <string name="name_title">Your full name</string>
    <string name="name_hint">Input your name…</string>
    <string name="name_empty_error">Name field cannot be empty !!!</string>
    <string name="email_title">Your email address</string>
    <string name="email_hint">Input your email…</string>
    <string name="email_empty_error">Email field cannot be empty !!!</string>
    <string name="email_format_error">Email field contain invalid email format !!!</string>
    <string name="password_title">Your password</string>
    <string name="password_hint">Input your password…</string>
    <string name="password_empty_error">Password field cannot be empty !!!</string>
    <string name="password_short_error">Password field must not be less than 8 character !!!</string>
    <string name="description_empty_error">Description field must not be empty !!!</string>
    <string name="button_register_desc">Register Button</string>
    <string name="button_login_desc">Login Button</string>
    <string name="text_welcome">Welcome to Dicoding Story</string>
    <string name="text_welcome_desc">Dicoding is technology education platform that help people to become global standard digital talent, let\'s improve your skills in Dicoding</string>
    <string name="text_fill_data">Fill Data First</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>
    <string name="register_error_message">Fail to register account, please try again later !!!</string>
    <string name="register_success_message">Registration process is success !!!</string>
    <string name="login_success_message">Login process is success, redirecting to Main Activity !!!</string>
    <string name="login_error_message">Fail to login, please try again later !!!</string>
    <string name="permission_granted_message">Permission request granted !!!</string>
    <string name="permission_denied_message">Permission request denied !!!</string>
    <string name="logout_title">Logout confirmation</string>
    <string name="logout_message">Are you sure to logout ???</string>
    <string name="negative_button_text">No</string>
    <string name="positive_button_text">Yes</string>
    <string name="share_message">Share this story with :</string>
    <string name="detail_error_message">Fail to fetched story detail, please try again later !!!</string>
    <string name="gallery_error_message">No media selected !!!</string>
    <string name="camera_error_message">No photo taken !!!</string>
    <string name="upload_success_message">Story upload is success, redirecting to Main Activity !!!</string>
    <string name="upload_error_message">Fail to upload story, please try again later !!!</string>
    <string name="maps_error_message">Fail to fetched story with location, please try again later !!!</string>
    <string name="logout_success_message">Logout process is success, redirecting to Welcome Activity !!!</string>
    <string name="button_share_desc">Share Icon</string>
    <string name="image_story">Story Photo</string>
    <string name="scrollview_story_desc">Scroll View for story list</string>
    <string name="scrollview_detail_desc">Scroll View for Story Detail</string>
    <string name="scrollview_upload_desc">Scroll View for upload image</string>
    <string name="scrollview_register_desc">Scroll View for register</string>
    <string name="scrollview_login_desc">Scroll View for login</string>
    <string name="button_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="ed_description_desc">Story Description</string>
    <string name="button_add_desc">Upload</string>
    <string name="iv_preview_desc">Preview of upload image story</string>
    <string name="iv_logo_desc">Image logo on story app</string>
    <string name="photo_format">image/jpeg</string>
    <string name="text_format">text/plain</string>
    <string name="extra_id">EXTRA_ID</string>
    <string name="fab_add_desc">Button to upload new story</string>
    <string name="button_setting_desc">Settings</string>
    <string name="button_logout_desc">Logout</string>
    <string name="auth_tab_desc">Auth Tab Layout</string>
    <string name="title_upload_story">Upload New Story</string>
    <string name="text_upload">Upload</string>
    <string name="tab_1">Register</string>
    <string name="tab_2">Login</string>
    <string name="tv_next">Next</string>
    <string name="button_auth_desc">Button to go to Auth</string>
    <string name="text_greeting">Welcome</string>
    <string name="title_activity_maps">Story with Location</string>
    <string name="text_retry">Try again</string>
    <string name="button_maps_desc">Maps</string>
    <string name="switch_location_text">Use Location</string>
    <string name="text_enable_location">Please enable your location service !!!</string>
</resources>